[gd_scene load_steps=5 format=3 uid="uid://gbe3nm3hwfva"]

[ext_resource type="Script" uid="uid://dge3g2vle4mg6" path="res://game/menu/login.gd" id="1_3sbx0"]
[ext_resource type="Texture2D" uid="uid://ccx60ceky8s55" path="res://game/menu/fondo/FondoFinal.png" id="2_g0nvw"]
[ext_resource type="Texture2D" uid="uid://cm07d8y0b4urv" path="res://game/menu/fondo/Boton Guardar.png" id="2_mi86k"]
[ext_resource type="Script" uid="uid://c7s1tehmws42i" path="res://game/menu/fondo_nebulosa.gd" id="3_q0lji"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3sbx0")

[node name="FondoNebulosa" type="Sprite2D" parent="."]
modulate = Color(0.40784314, 0.40784314, 0.40784314, 0.9490196)
position = Vector2(960, 540)
scale = Vector2(1.2213541, 1.2101852)
texture = ExtResource("2_g0nvw")
script = ExtResource("3_q0lji")

[node name="InputNombre" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -570.5
offset_top = -77.5
offset_right = 570.5
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
placeholder_text = "Nombre del Jugador"
alignment = 1

[node name="BotonContinuar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = 139.0
offset_right = 291.0
offset_bottom = 493.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_mi86k")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_top = 373.0
offset_right = 155.0
offset_bottom = 396.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Ingresa tu nombre"

[node name="LabelError" type="Label" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 129.0
offset_right = 1337.0
offset_bottom = 230.0
theme_override_font_sizes/font_size = 45

[connection signal="pressed" from="BotonContinuar" to="." method="_on_boton_continuar_pressed"]
